# my-acg-project

./: .gitmodules  CMakeLists.txt  README.md
demo/: earth.ppm
src/: CMakeLists.txt  bounding_box.h  bvh.h  camera.h  color.h  hit_record.h  hittable_list.h  main.cpp  material.h  ray.h  sphere.h  texture.h  vec3.h
src/lib/: bounding_box.h  bvh.h  camera.h  color.h  common.h  hit_record.h  hittable.h  hittable_list.h  interval.h  loader.h  make_box.h  mat3.h  material.h  mesh.h  orthonormal_basis.h  pdf.h  perlin.h  quad.h  ray.h  rtw_stb_image.h  scatter_record.h  sphere.h  texture.h  transformations.h  triangle.h  vec2.h  vec3.h
src/test/: main.cpp
